dist_man1_MANS=

if BUILD_BITCOIND
  dist_man1_MANS+=grovcoind.1
endif

if ENABLE_QT
  dist_man1_MANS+=grovcoin-qt.1
endif

if BUILD_BITCOIN_CLI
  dist_man1_MANS+=grovcoin-cli.1
endif

if BUILD_BITCOIN_TX
  dist_man1_MANS+=grovcoin-tx.1
endif

if ENABLE_WALLET
if BUILD_BITCOIN_WALLET
  dist_man1_MANS+=grovcoin-wallet.1
endif
endif
